Sidebar navigation solved, including collapsing sections and a button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,9 +24,8 @@ footer {
  border-top: 1px solid #ccc;
 }
 
-.sidebar {
+.io-sidebar {
   background: #fff;
-  border-top: 1px solid #ccc;
   border-right: 1px solid #ccc;
 }
 
